--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="image_story">Gambar Story</string>
     <string name="upload">Share Story</string>
     <string name="logout">Sign-out</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="maps">Stories Location</string>
+    <string name="retry">Coba Lagi</string>
+    <string name="error">Error Message</string>
 </resources>
